WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157846
Web Inspector: InspectorFrontendAPI.setTimelineProfilingEnabled should not implicitly show Timelines tab
https://bugs.webkit.org/show_bug.cgi?id=157846
Summary
Web Inspector: InspectorFrontendAPI.setTimelineProfilingEnabled should not im...
Blaze Burg
Reported
2016-05-18 10:23:12 PDT
Let the WebKit client decide whether to show the timelines tab. If we are capturing a timeline recording in the background, then it shouldn't switch to Timelines.
Attachments
Proposed Fix
(12.81 KB, patch)
2016-05-18 10:30 PDT
,
Blaze Burg
timothy
: review+
bburg
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-05-18 10:24:27 PDT
<
rdar://problem/26347508
>
Blaze Burg
Comment 2
2016-05-18 10:30:08 PDT
Created
attachment 279261
[details]
Proposed Fix I tested both the Start Timeline Recording menu item and implicitly starting a recording via Automation.inspectBrowsingContext. Both seemed to work fine with this change.
Matt Baker
Comment 3
2016-05-18 10:42:03 PDT
Comment on
attachment 279261
[details]
Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=279261&action=review
> Source/WebKit2/ChangeLog:8 > + Add a seperate ShowTimelines message to WebInspector and WebInspectorUI. Have the
sp: separate
Blaze Burg
Comment 4
2016-05-18 14:49:40 PDT
Committed
r201101
: <
http://trac.webkit.org/changeset/201101
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug