Web Inspector: InspectorFrontendAPI.setTimelineProfilingEnabled should not implicitly show Timelines tab https://bugs.webkit.org/show_bug.cgi?id=157846

Reviewed by Timothy Hatcher.

Source/WebInspectorUI:

Currently, if the Web Inspector opens for an in-progress or finished automation session,
it will always show the Timelines tab, disregarding any previous user view state. This
is annoying and is a bad user experience when trying to debug the same test repeatedly.

* UserInterface/Protocol/InspectorFrontendAPI.js:
(InspectorFrontendAPI.setTimelineProfilingEnabled): Don't implicitly show Timelines tab.
(InspectorFrontendAPI.showTimelines): Added. This is called explicitly when desired.

Source/WebKit2:

Add a separate ShowTimelines message to WebInspector and WebInspectorUI. Have the
start/stop profiling methods in public APIs explicitly call showTimelines() rather than
relying on InspectorFrontendAPI to do it.

* UIProcess/API/C/WKInspector.cpp:
(WKInspectorTogglePageProfiling):
* UIProcess/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::showTimelines):
* UIProcess/WebInspectorProxy.h:
* WebProcess/InjectedBundle/API/c/WKBundleInspector.cpp:
(WKBundleInspectorSetPageProfilingEnabled):
* WebProcess/WebPage/WebInspector.cpp:
(WebKit::WebInspector::showTimelines):
* WebProcess/WebPage/WebInspector.h:
* WebProcess/WebPage/WebInspector.messages.in:
* WebProcess/WebPage/WebInspectorUI.cpp:
(WebKit::WebInspectorUI::showTimelines):
* WebProcess/WebPage/WebInspectorUI.h:
* WebProcess/WebPage/WebInspectorUI.messages.in:

Canonical link: https://commits.webkit.org/175980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201101 268f45cc-cd09-0410-ab3c-d52691b4dbfc