Source/WebInspectorUI/UserInterface/Protocol/InspectorFrontendAPI.js
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2013, 2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -47,12 +47,10 @@ InspectorFrontendAPI = {
         if (WebInspector.timelineManager.isCapturing() === enabled)
             return;
 
-        if (enabled) {
-            WebInspector.showTimelineTab();
+        if (enabled)
             WebInspector.timelineManager.startCapturing();
-        } else {
+        else
             WebInspector.timelineManager.stopCapturing();
-        }
     },
 
     setElementSelectionEnabled: function(enabled)
@@ -97,6 +95,11 @@ InspectorFrontendAPI = {
     showResources: function()
     {
         WebInspector.showResourcesTab();
+    },
+
+    showTimelines: function()
+    {
+        WebInspector.showTimelineTab();
     },
 
     showMainResourceForFrame: function(frameIdentifier)
